--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -13,5 +13,11 @@ ext {
         compile("com.crashlytics.sdk.android:crashlytics:2.9.1@aar") {
             transitive = true
         }
+
+        /* AFM - Activity Fragment Manager */
+        implementation "com.massivedisaster:afm:$afmVersion"
+
+        /* ADAL - Android Development Acceleration Library */
+        implementation "com.massivedisaster.adal:adal-fragments:$adalVersion"
     }
 }
