Added base MVP and fragment state

--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -19,5 +19,9 @@ ext {
 
         /* ADAL - Android Development Acceleration Library */
         implementation "com.massivedisaster.adal:adal-fragments:$adalVersion"
+        implementation "com.massivedisaster.widget:arctoolbarview:$arctoolbarVersion"
+
+        /* Loading */
+        implementation "com.victor:lib:$loadingVersion"
     }
 }
