--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,6 @@ supportVersion=27.1.0
 fabricVersion=2.6.8@arr
 afmVersion=0.0.1
 adalVersion=0.1.19
+arctoolbarVersion=0.0.1
+loadingVersion=1.0.4
 
