--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:name=".WeatherApp"
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -28,6 +28,11 @@
 
         <activity
             android:name=".base.activity.ActivityToolbar"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
+            android:name=".base.activity.ActivityArcToolbar"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
 
