--- a/app/flavors.gradle
+++ b/app/flavors.gradle
@@ -11,6 +11,8 @@ android {
 
             buildConfigField "long", "SPLASH_TIMEOUT", "3000L"
 
+            buildConfigField "String", "AI_CLIENT_ACCESS_TOKEN", "\"be28a6db24a941019bdf9d53aa19ead8\""
+
             buildConfigField "String", "API_URL", "\"https://api.openweathermap.org/data/2.5/\""
             buildConfigField "String", "API_APPID", "\"7bd23be44c69269b1da1f940723152c6\""
             buildConfigField "long", "API_TIMEOUT", "30"
