Change icon and app name

--- a/app/flavors.gradle
+++ b/app/flavors.gradle
@@ -3,7 +3,7 @@ android {
         app {
             dimension "app"
 
-            def appName = "Weather"
+            def appName = "ForecAsk"
 
             applicationId "com.github.extmkv.weather"
             versionCode 1
