--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,16 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="a2b49d1d020f581f0e212ed3be8db04f6adba593" />
+
+        <!--widget-->
+        <receiver android:name=".widget.ForecaskWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_forecask" />
+        </receiver>
     </application>
 
 </manifest>
